[gd_scene load_steps=13 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Test/starfield.shader" type="Shader" id=2]
[ext_resource path="res://Scenes/galaxy_map/GalaxyCam.gd" type="Script" id=3]
[ext_resource path="res://assets/ship/1_0000_Ship.png" type="Texture" id=4]
[ext_resource path="res://Scenes/galaxy_map/Galaxy_Map.gd" type="Script" id=5]
[ext_resource path="res://Scenes/pause_screen/Pause.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Text/HeartbitXX.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scenes/galaxy_map/Starfield.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_color = Color( 0.2, 0.2, 0.2, 1 )
font_data = ExtResource( 7 )

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 1500.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 500, 100 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 2 )
shader_param/octaves = 5
shader_param/viewport_size = Vector2( 320, 180 )
shader_param/x_offset = 0.0
shader_param/offset = Vector2( 0, 0 )

[node name="Node" type="Node"]
script = ExtResource( 5 )

[node name="tPaneSlave" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="TPanel" type="ColorRect" parent="tPaneSlave"]
margin_right = 134.0
margin_bottom = 126.0
color = Color( 0.152941, 0.145098, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Travel" type="Button" parent="tPaneSlave/TPanel"]
margin_left = 6.51996
margin_top = 53.3096
margin_right = 126.52
margin_bottom = 73.3096
text = "Travel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlotRoute" type="Button" parent="tPaneSlave/TPanel"]
visible = false
margin_left = 6.51996
margin_top = 53.3096
margin_right = 126.52
margin_bottom = 73.3096
text = "Plot Route"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="System" type="Button" parent="tPaneSlave/TPanel"]
margin_left = 7.01996
margin_top = 76.3096
margin_right = 126.02
margin_bottom = 96.3096
text = "System Map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="tPaneSlave/TPanel"]
margin_left = 7.01996
margin_top = 99.0138
margin_right = 126.02
margin_bottom = 119.014
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SystemName" type="Label" parent="tPaneSlave/TPanel"]
margin_top = -1.0
margin_right = 133.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "TEMP SYSTEM NAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetNum" type="Label" parent="tPaneSlave/TPanel"]
margin_left = 1.0
margin_top = 22.2182
margin_right = 134.0
margin_bottom = 52.2182
custom_fonts/font = SubResource( 1 )
text = "Planets : 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ship" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
z_index = 1
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Ship"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ship/Area2D"]
shape = SubResource( 2 )

[node name="ClusterContainer" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 3 )

[node name="Line2D" type="Line2D" parent="."]
z_index = -1
z_as_relative = false
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="potentialContainer" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="potentialContainer"]
visible = false
rotation = -0.202458
shape = SubResource( 3 )

[node name="mapPlotContainer" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="Sector" type="Label" parent="CanvasLayer"]
margin_left = 8.515
margin_top = 290.693
margin_right = 77.515
margin_bottom = 321.693
text = "Sector: 0/0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlotInfo" type="Label" parent="CanvasLayer"]
margin_left = 9.0
margin_top = 320.267
margin_right = 153.0
margin_bottom = 351.267
text = "Destination System	: 
Jumps to destination	: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="Sky" type="TextureRect" parent="CanvasLayer/ParallaxBackground"]
show_behind_parent = true
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.629974
margin_right = -0.630005
margin_bottom = 3.05176e-05
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
scroll_scale = 0.1

[node name="Plotting" type="CanvasLayer" parent="."]
layer = 5

[node name="ColorRect" type="ColorRect" parent="Plotting"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.223529, 0.2, 0.2, 0.576471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Plotting/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -40.0
margin_right = 58.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Plotting/ColorRect/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.5
margin_top = -13.0
margin_right = 24.5
margin_bottom = 1.0
text = "Plotting"
align = 1
valign = 1

[node name="progress" type="Label" parent="Plotting/ColorRect/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = 7.0
margin_right = 30.0
margin_bottom = 21.0
text = "1...2...3..."
align = 1
valign = 1

[node name="Pause_Menu" parent="." instance=ExtResource( 6 )]
[connection signal="area_entered" from="Ship/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="input_event" from="Ship/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="CanUpdate" from="Camera2D" to="." method="_on_Camera2D_CanUpdate"]
